# rdfcon

./: .gitignore  README.md  Taskfile.yaml  package.json  pnpm-lock.yaml  pyproject.toml  schema.json
.github/workflows/: pr.yaml  release.yaml
examples/: custom_functions.yaml  data-1.trig  data-1.ttl  data.csv  data.trig  data.ttl  data.yaml  functions.py  spec.yaml
rdfcon/: __init__.py  __main__.py  convert.py  custom_functions.py  logs.py  namespace.py  schemas.py  utils.py
rdfcon/config/: logs.py
rdfcon/ui/: index.html
tests/: test_ci.py
ui/: index.html
