[project]
name = "rdfcon"
version = "1.5.9"
description = "tabular data to RDF Conversion tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cerberus>=1.3.7",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "rdflib>=7.2.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
pythonpath = ["rdfcon"]
testpaths = ["tests"]

[project.scripts]
rdfcon = "rdfcon.__main__:main"

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
